--- a/index.html
+++ b/index.html
@@ -1,12 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Login</title>
 </head>
+
 <body>
-    
+    <div>
+        <form action="">
+            <label for="gmail">Gmail:</label>
+            <input type="text" id="gmail" name="gmail"  placeholder="write an email"required>
+            <br>
+            <label for="passowrd">Password:</label>
+            <input type="password" id="password" name="password" placeholder="password" required>
+            <button id="submit">Submit</button>
+        </form>
+    </div>
 </body>
+
 </html>
