--- a/index.html
+++ b/index.html
@@ -9,10 +9,23 @@
 </head>
 
 <body>
-    <div>
+    <div class="login" id="login">
         <form action="">
             <label for="gmail">Gmail:</label>
             <input type="text" id="gmail" name="gmail"  placeholder="write an email"required>
+            <br>
+            <label for="passowrd">Password:</label>
+            <input type="password" id="password" name="password" placeholder="password" required>
+            <button id="submit">Submit</button>
+        </form>
+    </div>   
+    <div class="register" id="register">
+        <form action="">
+            <label for="gmail">Gmail:</label>
+            <input type="text" id="gmail" name="gmail"  placeholder="write an email"required>
+            <br>
+            <label for="passowrd">Password:</label>
+            <input type="password" id="password" name="password" placeholder="password" required>
             <br>
             <label for="passowrd">Password:</label>
             <input type="password" id="password" name="password" placeholder="password" required>
