javascript with value

--- a/index.html
+++ b/index.html
@@ -16,22 +16,23 @@
             <br>
             <label for="passowrd">Password:</label>
             <input type="password" id="password" name="password" placeholder="password" required>
-            <button id="submit">Submit</button>
+            <button id="submit" onclick="getUserInfo()">Submit</button>
         </form>
     </div>   
     <div class="register" id="register">
         <form action="">
-            <label for="gmail">Gmail:</label>
-            <input type="text" id="gmail" name="gmail"  placeholder="write an email"required>
+            <label for="gmailRegister">Gmail:</label>
+            <input type="text" id="gmailRegister" name="gmailRegister"  placeholder="write an email"required>
+            <br>
+            <label for="passwordRegister">Password:</label>
+            <input type="password" id="passwordRegister" name="passwordRegister" placeholder="password" required>
             <br>
             <label for="passowrd">Password:</label>
-            <input type="password" id="password" name="password" placeholder="password" required>
-            <br>
-            <label for="passowrd">Password:</label>
-            <input type="password" id="password" name="password" placeholder="password" required>
-            <button id="submit">Submit</button>
+            <input type="password" id="passwordRegister2" name="passwordRegister2" placeholder="password" required>
+            <button id="Submit2">Submit</button>
         </form>
     </div>
+    <script src="style.js"></script>
 </body>
 
 </html>
