--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <br>
             <label for="passowrd">Password:</label>
             <input type="password" id="password" name="password" placeholder="password" required>
-            <button id="submit" onclick="getUserInfo()">Submit</button>
+            <button id="submit" type="button" onclick="getUserInfo()">Submit</button>
         </form>
     </div>   
     <div class="register" id="register">
@@ -29,7 +29,7 @@
             <br>
             <label for="passowrd">Password:</label>
             <input type="password" id="passwordRegister2" name="passwordRegister2" placeholder="password" required>
-            <button id="Submit2">Submit</button>
+            <button id="Submit2" type="button" >Submit</button>
         </form>
     </div>
     <script src="style.js"></script>
