--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <div class="login" id="login">
-        <form action="">
+        <form action="welcome.html">
             <div id="errorMsg"></div>
             <label for="gmail">Gmail:</label>
             <input type="text" id="gmail" name="gmail" placeholder="write an email" required>
@@ -22,7 +22,11 @@
         </form>
     </div>
     <div class="register" id="register">
-        <form action="">
+        <form action="#">
+            <div id="errorMsg2"></div>
+            <label for="userName">User Name:</label>
+            <input type="text" id="userName" name="userName" placeholder="user Name" required>
+            <br>
             <label for="gmailRegister">Gmail:</label>
             <input type="text" id="gmailRegister" name="gmailRegister" placeholder="write an email" required>
             <br>
@@ -31,7 +35,7 @@
             <br>
             <label for="passowrd">Password:</label>
             <input type="password" id="passwordRegister2" name="passwordRegister2" placeholder="password" required>
-            <button id="Submit2" type="button">Submit</button>
+            <button id="Submit2" type="button" onclick="addUser()">Submit</button>
         </form>
     </div>
     <script src="style.js"></script>
