--- a/welcome.html
+++ b/welcome.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Welcome </h1>
+    <h1 id="welcomeUser" >Welcome </h1>
     <script src="style.js"></script>
 </body>
 </html>
