--- a/index.html
+++ b/index.html
@@ -5,20 +5,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="main.css">
     <title>Login</title>
 </head>
 
 <body>
     <div class="login" id="login">
         <form action="welcome.html">
-            <div id="errorMsg"></div>
+            <div id="errorMsg" ></div>
             <label for="gmail">Gmail:</label>
             <input type="text" id="gmail" name="gmail" placeholder="write an email" required>
             <br>
             <label for="passowrd">Password:</label>
             <input type="password" id="password" name="password" placeholder="password" required>
             <button id="submit" type="button" onclick="getUserInfo()">Submit</button>
-            <h3></h3>
         </form>
     </div>
     <div class="register" id="register">
