--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
 <body>
     <div class="login" id="login">
+        <h1>Login</h1>
         <form action="welcome.html">
             <div id="errorMsg" ></div>
             <label for="gmail">Gmail:</label>
@@ -23,21 +24,22 @@
         </form>
     </div>
     <div class="register" id="register">
-        <form action="#">
-            <div id="errorMsg2"></div>
-            <label for="userName">User Name:</label>
-            <input type="text" id="userName" name="userName" placeholder="user Name" required>
+        <form action="#" >
+            <h1  >Register</h1>
+            <div   id="errorMsg2"></div>
+            <label  for="userName">User Name:</label>
+            <input  type="text" id="userName" name="userName" placeholder="user Name" required>
             <br>
-            <label for="gmailRegister">Gmail:</label>
-            <input type="text" id="gmailRegister" name="gmailRegister" placeholder="write an email" required>
+            <label   for="gmailRegister">Gmail:</label>
+            <input   type="text" id="gmailRegister" name="gmailRegister" placeholder="write an email" required>
             <br>
-            <label for="passwordRegister">Password:</label>
-            <input type="password" id="passwordRegister" name="passwordRegister" placeholder="password" required>
+            <label  class="registerDisplay" for="passwordRegister">Password:</label>
+            <input  type="password" id="passwordRegister" name="passwordRegister" placeholder="password" required>
             <br>
-            <label for="passowrd">Password:</label>
-            <input type="password" id="passwordRegister2" name="passwordRegister2" placeholder="password" required>
+            <label  for="passowrd">Password:</label>
+            <input  type="password" id="passwordRegister2" name="passwordRegister2" placeholder="password" required>
             <br>
-            <button id="Submit2" type="button" onclick="addUser()">Submit</button>
+            <button  id="Submit2" type="button" onclick="addUser()">Submit</button>
         </form>
     </div>
     <script src="style.js"></script>
